// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Layout> renders the same output 1`] = `
<React.Fragment>
  <Toolbar
    clicked={[Function]}
  />
  <SideDrawer
    closed={[Function]}
    open={false}
  />
  <main
    className="Content"
  />
</React.Fragment>
`;

exports[`<Layout> renders with children 1`] = `
<React.Fragment>
  <Toolbar
    clicked={[Function]}
  />
  <SideDrawer
    closed={[Function]}
    open={false}
  />
  <main
    className="Content"
  >
    Hello world
  </main>
</React.Fragment>
`;
